# RAG-Chatbot

./: .gitignore  README.md
chatbot-be/: .env.example  README.md  pyproject.toml  requirements.txt
chatbot-be/app/: main.py
chatbot-be/app/api/v1/: agents.py  documents.py  indexes.py  jobs.py
chatbot-be/app/core/: config.py  exceptions.py  logger.py
chatbot-be/app/models/: schemas.py
chatbot-be/app/services/: agent_service.py  document_service.py  index_service.py  job_service.py  rag_service.py
chatbot-be/app/utils/: embedding_helper.py  pdf_processor.py  vector_store_helper.py
chatbot-ui/: .env.example  .env.production  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
chatbot-ui/src/: App.tsx  index.css  router.tsx
chatbot-ui/src/api/: agents.api.ts  client.ts  documents.api.ts  indexes.api.ts  jobs.api.ts
chatbot-ui/src/components/agents/: AgentCard.tsx  AgentDetailsModal.tsx  AgentForm.tsx
chatbot-ui/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ContextDisplay.tsx
chatbot-ui/src/components/documents/: AddToIndexModal.tsx  DocumentList.tsx  DocumentUpload.tsx  UpdateDirectoryModal.tsx
chatbot-ui/src/components/errors/: ErrorBoundary.tsx
chatbot-ui/src/pages/: AgentsPage.tsx  ChatPage.tsx  DocumentsPage.tsx  HomePage.tsx  IndexesPage.tsx
chatbot-ui/src/store/: agentStore.ts  chatStore.ts  documentStore.ts  indexStore.ts
chatbot-ui/src/types/: agent.types.ts  chat.types.ts  common.types.ts  document.types.ts  index.types.ts
chatbot-ui/src/utils/: errorHandler.ts  jobPolling.ts  security.ts  storage.ts
(+13 files in other folders)
